Actually fixed hover on mobile

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -394,7 +394,7 @@ main {
     }
   }
 
-  &:hover {
+  &:hover, &.hover {
     .tooltip-content {
       opacity: 1;
     }
